# oxid-bar

./: AGENTS.md  Cargo.toml  review.md
.beads/: issues.jsonl
bar/: Cargo.toml
bar/resources/: styles.css
bar/src/: app.rs  app_data.rs  config.rs  desktop_file.rs  hyprland_api.rs  icon_fetcher.rs  main.rs
bar/src/services/: hyprland.rs  mod.rs
bar/src/ui/: mod.rs  styles.rs  window.rs
bar/src/ui/components/: clock.rs  lang.rs  mod.rs  tray.rs  workspaces.rs
docs/: README.md  audio.md  bar.md  helpers.md  hyprland_workspaces.md  lang.md  logger.md  time.md  tray.md
modules/audio/: Cargo.toml
modules/audio/src/: main.rs
modules/audio/src/backend/pulse/: client.rs  device_info.rs  events.rs  listen_pulse_backend.rs  mod.rs  output_info.rs  start_listening.rs
modules/audio/src/ui/: build_ui.rs  mod.rs  popup.rs  widget.rs
modules/helpers/: Cargo.toml
modules/helpers/src/: lib.rs
modules/hyprland_workspaces/: Cargo.toml
modules/hyprland_workspaces/src/: lib.rs
modules/lang/: Cargo.toml
modules/lang/src/: lib.rs
modules/logger/: Cargo.toml
modules/logger/src/: lib.rs
modules/time/: Cargo.toml
modules/time/src/: lib.rs
modules/tray/: Cargo.toml
modules/tray/src/: lib.rs  main.rs
tasks/: audio-widget-interface.md
