[package]
name = "bar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gtk4 = "0.10.3"
gtk4-layer-shell = "0.7.1"
gtk4-layer-shell-sys = "0.5.2"
hyprland = "=0.4.0-beta.3"
hyprland_workspaces = { path = "../modules/hyprland_workspaces" }
lang = { path = "../modules/lang" }
time-utils = { package = "time", path = "../modules/time" }
